--- a/assets/styles.css
+++ b/assets/styles.css
@@ -57,3 +57,45 @@ footer h2 {
     font-size: 1.1vw;
 }
 /* end footer styles */
+
+/* hero style */
+.hero {
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+}
+
+.hero h2 {
+    font-style: italic;
+    font-size: 50 px;
+}
+
+.hero p {
+    font-size: 20px;
+    color:skyblue;
+    display: flex;
+    justify-content: right;
+    flex-wrap: wrap;
+}
+
+.sections {
+    display: flex;
+    flex-direction: row;
+    padding: 40px 5px;
+}
+.sections h2 {
+    font-size: 48px;
+    border-right: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 15px auto;
+    width: 50%;
+    display: flex
+}
+
+.sections p {
+    color: skyblue;
+    text-align: center;
+    justify-content: right;
+    display: flex;
+}
