--- a/assets/styles.css
+++ b/assets/styles.css
@@ -125,14 +125,15 @@ footer h2 {
 .work-grid {
     display: flex;
 }
+
 .content-one {
     display: flex;
     align-items: flex-end;
-    background-image: url("../assets/kickspro.png");
     background-size: cover;
+    flex-wrap: wrap;
+    padding: 2;
 
 }
-
 .content-one h3 {
     background-color: slategray;
 
